--- a/index.html
+++ b/index.html
@@ -9,24 +9,26 @@
     <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-    
+ 
 <div class="topo">
     <p>BuzzQuizz</p>
 </div>
 <div class="conteudo">
 
 <div class="seusquizzes">
-    <div class="texto">
+    <div class="textinho">
         Você não criou nenhum quizz ainda :(
     </div>
     <div class="botao">
         Criar Quizz
     </div>
-    <div class="hidden"><h1>TESTANDO GIT PUSH</h1></div>
 </div>
-teste
-</div>
+<div class="quizzes">
 
+</div>
+</div>
+ 
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
  <script src="projeto.js"></script>   
 </body>
 </html>
