--- a/index.html
+++ b/index.html
@@ -22,8 +22,97 @@
     <div class="botao">
         Criar Quizz
     </div>
-    <div class="hidden"><h1>TESTANDO GIT PUSH</h1></div>
 </div>
+
+
+
+
+
+
+<header><h1>BuzzQuizz</h1></header>
+
+<!-- div com todas as páginas para criar quizz  -->
+<div class="create-quizz-page"> 
+    <!-- pagina para inserir os dados do quizz  -->
+    <div class="create-quizz-page1">
+        <h1>Comece pelo começo</h1>
+        <div class="quizz-data">
+            <input class="quizz-title" placeholder="Título do seu quizz" type="text"/> <!-- min 20 e max 65 caracteres  -->
+            <input class="url-quizz" placeholder="URL da imagem do seu quizz" type="url"/>
+            <input class="questions-quantity" placeholder="Quantidade de perguntas do quizz" type="number"/><!-- min 3 perguntas  -->
+            <input class="level-quantity" placeholder="Quantidade de níveis do quizz" type="number"/><!-- min 2 níveis  -->
+        </div>
+    <button onclick="goToPage2Quizz()">Prosseguir pra criar perguntas</button>
+
+    <!-- pagina para inserir as perguntas -->
+    <div class="create-quizz-page2 escondido">
+        <h1>Crie suas perguntas</h1>
+        <div class="pergunta" data-identifier="question">
+            <h2>Pergunta 1</h2>
+            <div class="cabecalho-pergunta">
+                <input class="texto-pergunta" type="text" placeholder="Texto da pergunta" minlength="20" />
+                <input class="cor-pergunta" type="color" placeholder="Cor de fundo da pergunta" />
+            </div>
+            <h2>Resposta correta</h2>
+            <div class="resposta-correta">
+                <input class="texto-resposta" type="text" placeholder="Resposta correta" required="required" />
+                <input class="url-resposta" type="url" placeholder="URl da imagem" />
+            </div>
+            <h2>Respostas incorretas</h2>
+            <div class="resposta">
+                <input class="texto-resposta" type="text" placeholder="Resposta incorreta 1" required="required" />
+                <input class="url-resposta" type="url" placeholder="URl da imagem 1" />
+            </div>
+            <div class="resposta">
+                <input class="texto-resposta" type="text" placeholder="Resposta incorreta 2" required="required" />
+                <input class="url-resposta" type="url" placeholder="URl da imagem 2" />
+            </div>
+            <div class="resposta">
+                <input class="texto-resposta" type="text" placeholder="Resposta incorreta 3" required="required" />
+                <input class="url-resposta" type="url" placeholder="URl da imagem 3" />
+            </div>
+        </div>
+        <div class="nova-pergunta" data-identifier="expand">
+            <h2>Pergunta 2</h2>
+            <img class="botaoEditar" src="img/editar.png" alt="Botão editar" onclick="abrirNovaPergunta(this)">
+        </div>
+        <div class="nova-pergunta" data-identifier="expand">
+            <h2>Pergunta 3</h2>
+            <img class="botaoEditar" src="img/editar.png" alt="Botão editar" onclick="abrirNovaPergunta(this)">
+        </div>
+    </div>
+
+    <!-- pagina para inserir o level que o jogador chegou -->
+    <div class="create-quizz-page3 escondido">
+        <h1>Agora, decida os níveis!</h1>
+        <div class="level">
+            <h1>Nível 1</h1>
+            <input class="level-name" placeholder="Título do nível" type="text"/>
+            <input class="right-quantity-level" placeholder="% de acerto mínima" type="number"/>
+            <input class="url-image-level" placeholder="URL da imagem do nível" type="url"/>
+            <input class="text-description-level" placeholder="Descrição do nível" type="text"></input>
+        </div>
+        <div class="novo-level">
+            <h1>Nível 2</h1>
+            <ion-icon name="create-outline" onclick="editlevel()"></ion-icon>
+        </div>
+        <div class="novo-level">
+            <h1>Nível 3</h1>
+            <ion-icon name="create-outline" onclick="editlevel()"></ion-icon>
+        </div>
+        <button class="finish-quizz" onclick="finishQuizz()"><h1>Finalizar Quizz</h1></button>
+    </div>
+
+   <!-- Quizz pronto, página com opção para acessar o Quizz -->
+    <div class="create-quizz-page4 escondido">
+        <h1>Seu quizz está pronto!</h1>
+        <img src="" alt="">
+        <button onclick="goToCreatedQuizz()">Acessar Quizz</button>
+        <div class="goToHome">
+        <button onclick="goToHome()">Voltar pra home</button></div>
+        </div>
+</div>
+
 
 </div>
 
