alteração no JS: Validação dos dados do primeiro formulário

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <div class="create-quizz-page1 escondido">
         <h1>Comece pelo começo</h1>
         <div class="quizz-data">
-            <input class="quizz-title" placeholder="Título do seu quizz" type="text"/> <!-- min 20 e max 65 caracteres  -->
-            <input class="url-quizz" placeholder="URL da imagem do seu quizz" type="url"/>
-            <input class="questions-quantity" placeholder="Quantidade de perguntas do quizz" type="number"/><!-- min 3 perguntas  -->
-            <input class="level-quantity" placeholder="Quantidade de níveis do quizz" type="number"/><!-- min 2 níveis  -->
+            <input class="quizz-title" id="quizz-title" placeholder="Título do seu quizz" type="text"/> <!-- min 20 e max 65 caracteres  -->
+            <input class="url-quizz" id="url-quizz" placeholder="URL da imagem do seu quizz" type="url"/>
+            <input class="questions-quantity" id="questions-quantity" placeholder="Quantidade de perguntas do quizz" type="number"/><!-- min 3 perguntas  -->
+            <input class="level-quantity" id="level-quantity" placeholder="Quantidade de níveis do quizz" type="number"/><!-- min 2 níveis  -->
         </div>
     <button onclick="goToPage2Quizz()">Prosseguir pra criar perguntas</button>
 
