--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,27 +9,34 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
 </head>
+
 <body>
- 
-<div class="topo">
-    <p>BuzzQuizz</p>
-</div>
-<div class="conteudo">
 
-<div class="seusquizzes">
-    <div class="textinho">
-        Você não criou nenhum quizz ainda :(
+    <div class="topo">
+        <p>BuzzQuizz</p>
     </div>
-    <div class="botao">
-        Criar Quizz
-    </div>
-</div>
-<div class="quizzes">
+    <div class="conteudo">
 
-</div>
-</div>
- 
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
- <script src="projeto.js"></script>   
+        <div class="seusquizzes">
+            <div class="textinho">
+                Você não criou nenhum quizz ainda :(
+            </div>
+            <div class="botao">
+                Criar Quizz
+            </div>
+        </div>
+        <div class="quizzes">
+
+
+        </div>
+    </div>
+    <div class="tela2 hidden"> 
+        <div class="tela-box"></div>
+
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="projeto.js"></script>
 </body>
+
 </html>
