--- a/index.html
+++ b/index.html
@@ -30,8 +30,15 @@
 
         </div>
     </div>
-    <div class="tela2 hidden"> 
-        <div class="tela-box"></div>
+    <div class="tela2 hidden">
+        <div class="imgtela2">
+        </div>
+        <div class="caixapergunta">
+            <img width="330px" height="175px"  src="https://animetree.files.wordpress.com/2014/06/jjba-stardust-crusaders-josephs-face.jpg" alt="" srcset="">
+            <img width="330px" height="175px"  src="https://animetree.files.wordpress.com/2014/06/jjba-stardust-crusaders-josephs-face.jpg" alt="" srcset="">
+            <img width="330px" height="175px"  src="https://animetree.files.wordpress.com/2014/06/jjba-stardust-crusaders-josephs-face.jpg" alt="" srcset="">
+            <img width="330px" height="175px"  src="https://animetree.files.wordpress.com/2014/06/jjba-stardust-crusaders-josephs-face.jpg" alt="" srcset="">
+        </div>
 
 
     </div>
