alteração concluidas ao juntar os dois arquivos

--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
 </div>
 <div class="quizzes"></div>
 </div>
+
+<div class="tela2 hidden">
+    <div class="imgtela2">
+    </div>
+    <div class="caixapergunta">
+        <img width="330px" height="175px"  src="https://animetree.files.wordpress.com/2014/06/jjba-stardust-crusaders-josephs-face.jpg" alt="" srcset="">
+        <img width="330px" height="175px"  src="https://animetree.files.wordpress.com/2014/06/jjba-stardust-crusaders-josephs-face.jpg" alt="" srcset="">
+        <img width="330px" height="175px"  src="https://animetree.files.wordpress.com/2014/06/jjba-stardust-crusaders-josephs-face.jpg" alt="" srcset="">
+        <img width="330px" height="175px"  src="https://animetree.files.wordpress.com/2014/06/jjba-stardust-crusaders-josephs-face.jpg" alt="" srcset="">
+    </div>
+</div>
+
 <!-- div com todas as páginas para criar quizz  -->
 <div class="create-quizz-page"> 
     <!-- pagina para inserir os dados do quizz  -->
@@ -96,7 +108,8 @@
 
  
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script src="js/telaQuizzes.js"></script> 
 <script src="js/criarQuizz.js"></script>  
-<script src="js/telaQuizzes.js"></script>  
+ 
 </body>
 </html>
