adicionar número de perguntas solicitadas no formulário

--- a/index.html
+++ b/index.html
@@ -62,17 +62,13 @@
         <h1>Crie suas perguntas</h1>
         <div class="create-questions">
         </div>
-        <!-- Editar pergunta 2 e pergunta 3 clicando no icone  -->
+        <!-- Editar pergunta 2 e pergunta 3 clicando no icone  
         <div class="nextQuestion" data-identifier="expand">
             <div class="newQuestion">
                 <h2>Pergunta 2</h2>
                 <ion-icon name="create-outline" class="botaoEditar" onclick="nextQuestion(this)" data-identifier="expand"></ion-icon>
             </div>
-            <div class="newQuestion">
-                <h2>Pergunta 3</h2>
-                <ion-icon name="create-outline" class="botaoEditar" onclick="nextQuestion(this)" data-identifier="expand"></ion-icon>
-            </div>
-        </div>
+        </div>-->
 
     <!-- pagina para inserir o level que o jogador chegou -->
     <div class="create-quizz-page3 escondido"  style="display: none;">
