--- a/index.html
+++ b/index.html
@@ -35,16 +35,26 @@
 <div class="tela2 hidden">
     <div class="imgtela2">
     </div>
-    <div class="caixapergunta">
-        <img width="330px" height="175px"  src="https://animetree.files.wordpress.com/2014/06/jjba-stardust-crusaders-josephs-face.jpg" alt="" srcset="">
-        <img width="330px" height="175px"  src="https://animetree.files.wordpress.com/2014/06/jjba-stardust-crusaders-josephs-face.jpg" alt="" srcset="">
-        <img width="330px" height="175px"  src="https://animetree.files.wordpress.com/2014/06/jjba-stardust-crusaders-josephs-face.jpg" alt="" srcset="">
-        <img width="330px" height="175px"  src="https://animetree.files.wordpress.com/2014/06/jjba-stardust-crusaders-josephs-face.jpg" alt="" srcset="">
+    <div class="caixaperguntas">
+        <div class="pergunta"></div>
+        <div class="caixinhaimg">
+        <img width="280px" height="110px" style="margin-right: 10px "  src="https://animetree.files.wordpress.com/2014/06/jjba-stardust-crusaders-josephs-face.jpg" alt="" srcset="">
+        </div>
+        <div class="caixinhaimg">
+        <img width="280px" height="110px" style="margin-right: 10px "  src="https://animetree.files.wordpress.com/2014/06/jjba-stardust-crusaders-josephs-face.jpg" alt="" srcset="">
+        </div>
+        <div class="caixinhaimg">
+        <img width="280px" height="110px" style="margin-right: 10px "  src="https://animetree.files.wordpress.com/2014/06/jjba-stardust-crusaders-josephs-face.jpg" alt="" srcset="">
+        </div>
+        <div class="caixinhaimg">
+        <img width="280px" height="110px" style="margin-right: 10px "  src="https://animetree.files.wordpress.com/2014/06/jjba-stardust-crusaders-josephs-face.jpg" alt="" srcset="">
+        </div>
+        
     </div>
 </div>
 
 <!-- div com todas as páginas para criar quizz  -->
-<div class="create-quizz-page"> 
+<div class="create-quizz-page escondido"> 
     <!-- pagina para inserir os dados do quizz  -->
     <div class="create-quizz-page1 escondido">
         <h1>Comece pelo começo</h1>
