Correção JS e HTML fazendo aparecer pagina 3 da criação de quiz

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
     <div class="create-quizz-page2 escondido">
         <h1>Crie suas perguntas</h1>
         <div class="create-questions">
-        </div>
+        </div></div>
 
     <!-- pagina para inserir o level que o jogador chegou -->
-    <div class="create-quizz-page3 escondido"  style="display: none;">
+    <div class="create-quizz-page3 escondido">
         <h1>Agora, decida os níveis!</h1>
         <div class="level">
             <h1>Nível 1</h1>
