--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BuzzQuizz</title>
     <link rel="stylesheet" href="css/reset.css"> 
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/telaQuizzes.css">
     <link rel="stylesheet" href="css/criarQuizz.css">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
@@ -79,10 +78,14 @@
     </div>
 
    <!-- Quizz pronto, página com opção para acessar o Quizz -->
-    <div class="create-quizz-page4 escondido" style="display: none;">
+    <div class="create-quizz-page4 escondido">
+        
         <h1>Seu quizz está pronto!</h1>
-        <img src="" alt="">
-        <button onclick="goToCreatedQuizz()">Acessar Quizz</button>
+        <div class="espaçoaqui"><h1>   </h1></div>
+        <div class="imgquizzfinalizado"></div>
+        <div class="espaçoaqui"><h1>   </h1></div>
+        <button onclick="">Acessar Quizz</button>
+        <div class="espaçoaqui"><h1>   </h1></div>
         <div class="goToHome">
         <button onclick="goToHome()">Voltar pra home</button></div>
         </div>
